--- a/demo/2.X_with-plugins-dot-button.html
+++ b/demo/2.X_with-plugins-dot-button.html
@@ -82,21 +82,42 @@
         {
             content: './imgs/6.jpg'
         },
-        // picture
+        // HTML String
         {
-            content: './imgs/7.jpg'
+            content: '<div style="font-size:4em;color:white;text-align: center">HTML String</div>'
         },
-        // picture
+        // element
         {
-            content: './imgs/11.jpg'
+            content: (function () {
+                var dom = document.createElement('div');
+                dom.innerHTML = 'Element';
+                dom.style.cssText = 'font-size:3em;color:rgb(230, 230, 63);';
+                return dom;
+            })()
         },
-        // picture
+        // fragment
         {
-            content: './imgs/9.jpg'
+            content: (function () {
+                var frag = document.createDocumentFragment();
+                var img = new Image()
+                var dom = document.createElement('div');
+                dom.innerHTML = 'Fragment';
+                dom.style.cssText = 'font-size:3em;color:rgb(230, 63, 230);';
+                frag.appendChild(dom);
+                return frag;
+            })()
         },
-        // picture
+        // dom
         {
-            content: './imgs/10.jpg'
+            content: document.querySelector('#hidden-space > p')
+        },
+        // iframe
+        {
+            content: '' +
+            '<div style="padding-top:.2em;font-size:3em;color:rgb(230, 63, 230);position:absolute;top:0;left:0;height:100%;width:100%;z-index:1">' +
+            '<span style="padding:.2em;background-color:black;">Iframe</span>' +
+            '</div>' +
+            '<iframe style="position:relative;z-index:0;height:100%;" src="http://mobile.baidu.com"></iframe>'
         }
     ];
 
@@ -106,17 +127,8 @@
         isLooping: 1,
         isOverspread: 1,
         animateTime: 800, // ms
-        plugins: ['button']
+        plugins: ['dot', 'button']
     });
-
-    S.regPlugin('dot');
-
-    S.regPlugin('others', function () {
-        console.debug('Init Plugin "others"', arguments)
-        this.on('slideChange', function () {
-            alert('the plugin "others" on "slideChange"');
-        });
-    }, 1, 2, 3);
 </script>
 </body>
 </html>
