--- a/demo/pic_card.html
+++ b/demo/pic_card.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport"
-          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
-    <link href="../public/css/iSlider.css" rel="stylesheet">
+          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
+    <link href="public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -146,10 +146,10 @@
         {content: "./imgs/card/5.jpg"},
         {content: "./imgs/card/6.jpg"},
         {content: "./imgs/card/7.jpg"},
-        {content: "./imgs/card/8.jpg"}];
+        {content: "./imgs/card/8.jpg"}
+    ];
 
     var islider = new iSlider({
-        type: 'pic',
         data: list,
         dom: document.getElementById("iSlider-wrapper"),
         isVertical: true,
