--- a/demo/2.X_with-plugins-others.html
+++ b/demo/2.X_with-plugins-others.html
@@ -4,15 +4,14 @@
     <meta charset="utf-8"/>
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
-    <title>iSlider more animation</title>
-    <link href="public/css/iSlider.css" rel="stylesheet">
+    <title>iSlider with plugins others</title>
+    <link href="./public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
             padding: 0;
             background: #333;
             overflow: hidden;
-            font-size: 12px;
         }
 
         /*ul wrapper*/
@@ -48,9 +47,23 @@
             max-height: 100%;
         }
 
-        iframe {
-            height: 100%;
-            width: 100%;
+        .islider-btn-outer {
+            background-color: rgba(0, 0, 0, .5);
+            border-radius: 99px;
+        }
+
+        .islider-btn-inner {
+            height: 30%;
+            width: 30%;
+            margin-top: 34%;
+        }
+
+        .islider-btn-outer.left .islider-btn-inner {
+            margin-left: 40%;
+        }
+
+        .islider-btn-outer.right .islider-btn-inner {
+            margin-right: 40%;
         }
     </style>
 
@@ -60,8 +73,7 @@
 <div id="hidden-space" style="display:none">
     <p style="font-size:3em;text-align: center;color:#04f512">A node in dom tree.</p>
 </div>
-<script type="text/javascript" src="public/js/iSlider.js"></script>
-<script type="text/javascript" src="public/js/iSlider.animate.js"></script>
+<script type="text/javascript" src="./public/js/iSlider.js"></script>
 <script id="show-code">
     var list = [
         // picture
@@ -98,17 +110,30 @@
             content: document.querySelector('#hidden-space > p')
         },
         // iframe
-        // {
-        //     content: '<iframe src="http://mobile.baidu.com/"></iframe>'
-        // }
+        {
+            content: '' +
+            '<div style="padding-top:.2em;font-size:3em;color:rgb(230, 63, 230);position:absolute;top:0;left:0;height:100%;width:100%;z-index:1">' +
+            '<span style="padding:.2em;background-color:black;">Iframe</span>' +
+            '</div>' +
+            '<iframe style="position:relative;z-index:0;height:100%;" src="http://mobile.baidu.com"></iframe>'
+        }
     ];
+
+    iSlider.regPlugin('other', function (opts) {
+        alert(opts.value + ' is active, please open console');
+        this.on('slideChange', function (i, el) {
+            console.log('[' + opts.name + '] Slide to:', i);
+            console.log('[' + opts.name + '] Container is:', el)
+        });
+    });
 
     var S = new iSlider({
         dom: document.getElementById('iSlider-wrapper'),
         data: list,
         isLooping: 1,
         isOverspread: 1,
-        animateTime: 800
+        animateTime: 800, // ms
+        plugins: [['other', {name: 'other', value: 'A new plugin'}]]
     });
 </script>
 </body>
