--- a/demo/index_chinese.html
+++ b/demo/index_chinese.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>iSlider by BE-FE</title>
-
     <link rel="stylesheet" href="public/css/index.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.9.1/styles/default.min.css">
+    <link rel="stylesheet" href="//highlightjs.org/static/styles/monokai_sublime.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,21 +17,26 @@
 
     <div class="divider"></div>
     <ul>
-        <li>
-            <a href="#intro">概要</a>
-            <!-- <h3>概要</h3> -->
-            <!--                 <ul>
-                                <li><a>Only Image</a></li>
-                                <li><a>Image with animation</a></li>
-                                <li><a>Image with autoplay</a></li>
-                            </ul> -->
-        </li>
+        <li><a href="#intro">概要</a></li>
         <li><a href="#frame">结构说明</a></li>
         <li><a href="#demos">demo实例</a></li>
         <li><a href="#demo-code">demo代码</a></li>
         <li><a href="#options">初始化</a></li>
         <li><a href="#functions">实例方法</a></li>
-
+    </ul>
+    <ul>
+        <li>
+            <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=star&count=true&size=small"
+                    frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
+        </li>
+        <li>
+            <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=watch&count=true&size=small&v=2"
+                    frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
+        </li>
+        <li>
+            <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=fork&count=true&size=small"
+                    frameborder="0" scrolling="0" width="158px" height="20px"></iframe>
+        </li>
     </ul>
 </header>
 <section>
@@ -45,38 +49,48 @@
                 iSlider
             </h1>
             <h4>
-                <a href="http://be-fe.github.io/iSlider/index_en.html">iSlider English Official Page</a>
+                <a href="http://be-fe.github.io/iSlider/demo/index.html">iSlider English Demo page</a>
                 <br>
-                <a href="#demos">iSlider Example</a>
+                <a href="#demos">iSlider 示例</a>
             </h4>
 
             <p>iSlider是一个表现出众，无任何插件依赖的手机平台javascript滑动组件。它能够处理任何元素，例如图片或者DOM元素。它有如下特性：</p>
             <ul class="task-list">
                 <li>性能极好，硬件加速，极小占用内存</li>
-                <li>能够自定义动画，自带的动画包括 default, rotate, depth, flow, flip, card</li>
-                <li>你能够简易地添加回调函数(onslidestart, onslide, onslideend, onslidechange)</li>
-                <li>我们还支持滑动衰减效果，循环效果，自动滑动效果，水平/垂直滑动</li>
-                <li>支持桌面鼠标动作，方便测试</li>
+                <li>能够自定义动画，自带的动画包括 default, rotate, depth, flow, flip, card, fade 等</li>
+                <li>你能够简易地添加回调函数(islider.on('eventType', callback))</li>
+                <li>支持滑动衰减效果，循环效果，自动滑动效果，水平/垂直滑动</li>
+                <li>自动适配桌面鼠标动作与移动端手势，方便测试与跨平台使用</li>
                 <li>支持图片预加载，改善用户体验</li>
-                <li>支持手势缩放，解决图片太大无法看清问题</li>
+                <li>[Plugin]支持手势缩放，解决图片太大无法看清问题</li>
+                <li>[2.0+]支持更多种类的元素置入，自动匹配场景类型，识别图片并预加载</li>
+                <li>[2.0+]更完善的代理事件管理机制，优化内存占用</li>
             </ul>
-            <h2 id="frame">iSlider结构说明</h2>
+            <h2 id="frame">iSlider 结构说明</h2>
             <ul>
-                <li>islider_core.js： iSlider核心代码库,定义iSlider类，绑定touch事件，图片预加载逻辑，以及图片翻页逻辑</li>
-                <li>islider_dot.js： 支持在图片上添加页码标示，支持点击翻页，以...展示，<a target="_blank" href="./pic_with_dots.html">demo地址</a>
+                <li>
+                    iSlider.js： iSlider核心代码库,定义iSlider类，绑定touch事件，图片预加载逻辑，以及图片翻页逻辑
                 </li>
-                <li>islider_button.js： 支持在图片上添加页码标示，支持点击翻页. 以左右图标展示<a target="_blank" href="./pic_with_button.html">demo地址</a>
+                <li>
+                    iSlider.animate.js： islider滑动效果库，目前支持flip、depth、flow等翻页效果。
+                    <a target="_blank" href="./pic_with_animate.html">demo地址</a>
                 </li>
-                <li>islider_animate.js： islider滑动效果库，目前支持flip、depth、flow等翻页效果. <a target="_blank"
-                                                                                  href="./pic_with_animate.html">demo地址</a>
+                <li>
+                    iSlider.plugin.dot.js： 支持在图片上添加页码标示，支持点击翻页，以...展示。
+                    <a target="_blank" href="./pic_with_dots.html">demo地址</a>
                 </li>
-                <li>islider_zoom.js： 针对type为pic类型的滑动元素提供的手势缩放功能，支持android和ios中手势缩放功能，同时支持边缘检测<a href="./pic_zoom.html"
-                                                                                                target="_blank">demo地址</a>
+                <li>
+                    iSlider.plugin.button.js： 支持在图片上添加页码标示，支持点击翻页，以左右图标展示。
+                    <a target="_blank" href="./pic_with_button.html">demo地址</a>
+                </li>
+                <li>
+                    iSlider.plugin.zoompic.js： 针对type为pic类型的滑动元素提供的手势缩放功能，支持android和ios中手势缩放功能，同时支持边缘检测。
+                    <a target="_blank" href="./pic_zoom.html">demo地址</a>
                 </li>
             </ul>
         </div>
         <div id="demos">
-            <h2>iSlider demos</h2>
+            <h2>iSlider 示例</h2>
 
             <p>若是PC，请打开webkit浏览器进行测试</p>
 
@@ -88,7 +102,7 @@
             </div>
             <div id="toggle-box">
                 <button type="button" data-target="./2.X_default.html">简单开始</button>
-                <button type="button" data-target="./2.X_more-loop.html">循环播放</button>
+                <button type="button" class="active" data-target="./2.X_more-loop.html">循环播放</button>
                 <button type="button" data-target="./2.X_more-animation.html">切换特效</button>
                 <button type="button" data-target="./2.X_more-3d.html">3D切换特效</button>
                 <button type="button" data-target="./2.X_more-autoplay.html">自动播放控制</button>
