--- a/demo/index_chinese.html
+++ b/demo/index_chinese.html
@@ -19,8 +19,8 @@
     <ul>
         <li><a href="#intro">概要</a></li>
         <li><a href="#frame">结构说明</a></li>
-        <li><a href="#demos">demo实例</a></li>
-        <li><a href="#demo-code">demo代码</a></li>
+        <li><a href="#demos">Demo实例</a></li>
+        <li><a href="#demo-code">Demo代码</a></li>
         <li><a href="#options">初始化</a></li>
         <li><a href="#functions">实例方法</a></li>
     </ul>
@@ -36,6 +36,10 @@
         <li>
             <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=fork&count=true&size=small"
                     frameborder="0" scrolling="0" width="158px" height="20px"></iframe>
+        </li>
+        <li>
+            <iframe src="https://img.shields.io/npm/dm/islider.svg" frameborder="0" scrolling="0" width="160px"
+                    height="20px"></iframe>
         </li>
     </ul>
 </header>
