--- a/src/index.html
+++ b/src/index.html
@@ -95,14 +95,15 @@
             document.getElementById("(Ō̥̥̥̥̥̥̥ ԑ Ō̥̥̥̥̥̥̥ )"), list, {
 //                data: list,
                 dom: document.getElementById("iSlider-wrapper"),
-                isVertical: true,
+                //isVertical: true,
                 isLooping: 1,
                 isOverspread: 1,
                 animateType: 'rotate',
+                delay: 3000,
                 animateTime: 1000,
                 fixPage: 0,
                 isDebug: 1,
-                // isAutoplay: true,
+                isAutoplay: true,
                 // duration: 5000,
                 plugins: [['dot', {locate: 'relative'}], 'button', ['zoompic', {zoomFactor: 2}]],
 //                onslide: function () {
