--- a/demo/index.html
+++ b/demo/index.html
@@ -53,7 +53,7 @@
                 iSlider
             </h1>
             <h4>
-                <a href="http://be-fe.github.io/iSlider/demo/index.html">iSlider English Demo page</a>
+                <a href="http://be-fe.github.io/iSlider/demo/index_chinese.html">iSlider 中文演示页</a>
                 <br>
                 <a href="#demos">iSlider DEMO</a>
             </h4>
