bugs in demo templates
Some demo pages don’t work well, because of wrong path.

pic_with_dots.html doesn’t work, as there is not a function called
addDot. Although the file plugin.dot.js is included, there is not
plugins ‘dot’ in options, it works now.

--- a/demo/dom_default.html
+++ b/demo/dom_default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
-    <link href="../public/css/iSlider.css" rel="stylesheet">
+    <link href="./public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -65,7 +65,7 @@
 </head>
 <body>
 <div id="iSlider-wrap"></div>
-<script type="text/javascript" src="../public/js/iSlider.js"></script>
+<script type="text/javascript" src="./public/js/iSlider.js"></script>
 <script>
     var list = [{
         'content': '<a href="http://www.baidu.com"><div class="content home"><h1>Home</h1><h2>This is home page</h2><p>home is pretty awsome</p><div></a><div><input type="text"><input type="checkbox"></div>'
