--- a/demo/dom_with_navigator.html
+++ b/demo/dom_with_navigator.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
-    <link href="../public/css/iSlider.css" rel="stylesheet">
+    <link href="./public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -94,7 +94,7 @@
     </div>
     <div id="iSlider-show"></div>
 </div>
-<script type="text/javascript" src="../public/js/iSlider.js"></script>
+<script type="text/javascript" src="./public/js/iSlider.js"></script>
 <script>
     var list = [{
         'content': '<div class="page"><h1>Home</h1><h2>This is home page</h2><p>home is pretty awsome, home is pretty awsome, home is pretty awsome.</p><p>home is pretty awsome.home is pretty awsome, home is pretty awsome. home is pretty awsome home is pretty awsome.</p></div>'
