--- a/demo/pic_card.html
+++ b/demo/pic_card.html
@@ -135,7 +135,7 @@
 </aside>
 <audio src="./imgs/card/YouGotMe.mp3" autoplay="autoplay" loop="loop" id="autoplay"></audio>
 <div id="iSlider-arrow"></div>
-<script src="../public/js/iSlider.js"></script>
+<script src="./public/js/iSlider.js"></script>
 
 <script>
     var list = [
