--- a/demo/pic_with_dots.html
+++ b/demo/pic_with_dots.html
@@ -71,9 +71,10 @@
         data: list,
         dom: document.getElementById("iSlider-wrapper"),
         isLooping: true,
+        plugins: ['dot']
     };
     var islider = new iSlider(opts);
-    islider.addDot();
+    // islider.addDot();
 
 </script>
 </body>
