--- a/demo/dom_slide_with_btn.html
+++ b/demo/dom_slide_with_btn.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
-    <link href="../public/css/iSlider.css" rel="stylesheet">
+    <link href="./public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -86,8 +86,8 @@
 </head>
 <body>
 <div id="iSlider-wrapper"></div>
-<script type="text/javascript" src="../public/js/iSlider.js"></script>
-<script type="text/javascript" src="../public/js/iSlider.plugin.button.js"></script>
+<script type="text/javascript" src="./public/js/iSlider.js"></script>
+<script type="text/javascript" src="./public/js/iSlider.plugin.button.js"></script>
 <script>
     var list = [{
         'content': '<div class="content home"><h1>Home</h1><h2>This is home page</h2><p>home is pretty awsome</p><div>'
