--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,12 @@
         }
 
         #iSlider-wrapper {
+            width: 100%;
             height: 100%;
+        }
+
+        #iSlider-wrapper li {
+            overflow: auto;
         }
 
         .islider-btn-outer {
@@ -98,7 +103,7 @@
                 //isVertical: true,
                 isLooping: 1,
                 isOverspread: 1,
-                animateType: 'rotate',
+                //animateType: 'rotate',
                 delay: 3000,
                 animateTime: 1000,
                 fixPage: 0,
