--- a/src/index.html
+++ b/src/index.html
@@ -108,8 +108,8 @@
                 animateTime: 1000,
                 fixPage: 0,
                 isDebug: 1,
-                isAutoplay: true,
-                // duration: 5000,
+//                isAutoplay: true,
+//                duration: 5000,
                 plugins: [['dot', {locate: 'relative'}], 'button', ['zoompic', {zoomFactor: 2}]],
 //                onslide: function () {
 //                    console.debug(arguments)
