--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,16 @@
         body {
             margin: 0;
             padding: 0;
-            background: #333;
             overflow: hidden;
         }
 
         #iSlider-wrapper {
             width: 100%;
             height: 100%;
+        }
+
+        .islider-outer > li {
+            background-color: black;
         }
 
         #iSlider-wrapper li {
@@ -100,11 +103,11 @@
             document.getElementById("(Ō̥̥̥̥̥̥̥ ԑ Ō̥̥̥̥̥̥̥ )"), list, {
 //                data: list,
                 dom: document.getElementById("iSlider-wrapper"),
-                //isVertical: true,
+//                isVertical: true,
                 isLooping: 1,
                 isOverspread: 1,
-                //animateType: 'rotate',
-                delay: 3000,
+//                animateType: 'rotate',
+//                delay: 3000,
                 animateTime: 1000,
                 fixPage: 0,
                 isDebug: 1,
