--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,25 @@
         .islider-btn-outer {
             z-index: 1000;
         }
+
+        .ro {
+            background: black;
+            height: 100%;
+            width: 100%;
+        }
+
+        .ro:before {
+            content: '';
+            position: absolute;
+            left: 100px;
+            top: 100px;
+            background: cornflowerblue;
+            -webkit-border-radius: 100px;
+            -moz-border-radius: 100px;
+            border-radius: 100px;
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 
@@ -62,42 +81,46 @@
 <script src="js/plugins/zoompic.js"></script>
 <script>
     var list = [];
-    for (var i = 1; i <= 3; i++)
-        list.push({content: './resource/imgs/random/' + i + '.jpg'});
-
-
-    for (var i = 4; i <= 9; i++)
+    //    for (var i = 1; i <= 3; i++)
+    //        list.push({content: './resource/imgs/random/' + i + '.jpg'});
+    //
+    //
+    //    for (var i = 4; i <= 9; i++)
+    //        list.push({
+    //            content: '<div style="font-size:1.2em;color:white;"><img src="./resource/imgs/random/' + i + '.jpg"/><br />TEXT' + i + '</div>'
+    //        });
+    //
+    //    list.push({
+    //        content: '<div style="font-size:2em;color:white;text-align: center">HTML<a href="http://baidu.com">Link</a></div>'
+    //    });
+    //
+    //    list.push({
+    //        content: (function () {
+    //            var dom = document.createElement('div');
+    //            dom.innerHTML = 'Element';
+    //            dom.style.cssText = 'font-size:2em;color:rgb(230, 230, 63);';
+    //            return dom;
+    //        })()
+    //    });
+    //
+    //    list.push({
+    //        content: (function () {
+    //            var frag = document.createDocumentFragment();
+    //            var dom = document.createElement('div');
+    //            dom.innerHTML = 'Fragment';
+    //            dom.style.cssText = 'font-size:2em;color:rgb(230, 63, 230);';
+    //            frag.appendChild(dom);
+    //            return frag;
+    //        })()
+    //    });
+    //
+    //    list.push({
+    //        content: document.getElementById('pages')
+    //    });
+    for (var i = 0; i < 5; i++)
         list.push({
-            content: '<div style="font-size:1.2em;color:white;"><img src="./resource/imgs/random/' + i + '.jpg"/><br />TEXT' + i + '</div>'
+            content: '<div class="ro"></div>'
         });
-
-    list.push({
-        content: '<div style="font-size:2em;color:white;text-align: center">HTML<a href="http://baidu.com">Link</a></div>'
-    });
-
-    list.push({
-        content: (function () {
-            var dom = document.createElement('div');
-            dom.innerHTML = 'Element';
-            dom.style.cssText = 'font-size:2em;color:rgb(230, 230, 63);';
-            return dom;
-        })()
-    });
-
-    list.push({
-        content: (function () {
-            var frag = document.createDocumentFragment();
-            var dom = document.createElement('div');
-            dom.innerHTML = 'Fragment';
-            dom.style.cssText = 'font-size:2em;color:rgb(230, 63, 230);';
-            frag.appendChild(dom);
-            return frag;
-        })()
-    });
-
-    list.push({
-        content: document.getElementById('pages')
-    });
 
     var islider = new iSlider(
             document.getElementById("(Ō̥̥̥̥̥̥̥ ԑ Ō̥̥̥̥̥̥̥ )"), list, {
@@ -106,7 +129,7 @@
 //                isVertical: true,
                 isLooping: 1,
                 isOverspread: 1,
-//                animateType: 'rotate',
+                animateType: 'rotate',
 //                delay: 3000,
                 animateTime: 1000,
                 fixPage: 0,
