index.html background fix

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         ISL.slideNext();
     });
 
-    ISL.on('slideChanged', fstyle);
+    ISL.on('slideChange', fstyle);
 </script>
 </body>
 </html>
