--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
 
     var IS_IN_IS = (function () {
         var data = [];
-        for (var i = 1; i <= 9; i++) {
+        for (var i = 0; i < 9; i++) {
             data.push({
-                content: 'demo/imgs/long/' + i + '.jpg'
+                content: 'http://be-fe.github.io/thumbnails/saber/' + i + (i < 7 ? '.jpg' : '.gif')
             });
         }
         var h = new iSlider(document.getElementById('is_in_is'), data, {
