Optimize file directory structure

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         var data = [];
         for (var i = 0; i < 9; i++) {
             data.push({
-                content: 'http://be-fe.github.io/thumbnails/saber/' + i + (i < 7 ? '.jpg' : '.gif')
+                content: 'http://be-fe.github.io/iSlider/thumbnails/saber/' + i + (i < 7 ? '.jpg' : '.gif')
             });
         }
         var h = new iSlider(document.getElementById('is_in_is'), data, {
