--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <div id="is_in_is"></div>
             </div>
         </div>
-        <audio id="is_in_is_bgm" preload="auto">
+        <audio preload="auto" loop="loop">
             <source src="//be-fe.github.io/iSlider/thumbnails/saber/knight.mp3" type="audio/mpeg"/>
         </audio>
     </div>
