--- a/index.html
+++ b/index.html
@@ -179,6 +179,19 @@
             margin: -210px 0 0 -330px;
         }
 
+        .is-in-is > em {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            width: 200px;
+            margin-top: 10px;
+            margin-left: -100px;
+            font-style: normal;
+            font-size: 12px;
+            text-align: center;
+            color: rgba(255, 255, 255, .25);
+        }
+
         #is_in_is {
             position: relative;
             height: 100%;
@@ -325,9 +338,10 @@
         <div class="is-in-is-wrap">
             <div class="is-in-is">
                 <div id="is_in_is"></div>
+                <em>吾王劍鋒所指 即吾心之所向</em>
             </div>
         </div>
-        <audio preload="auto" loop="loop">
+        <audio id="is_in_is_bgm" preload="auto" loop="loop">
             <source src="//be-fe.github.io/iSlider/thumbnails/saber/knight.mp3" type="audio/mpeg"/>
         </audio>
     </div>
