--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
         </audio>
     </div>
 </div>
-<script src="demo/public/js/iSlider.js"></script>
-<script src="demo/public/js/iSlider.animate.js"></script>
-<script src="demo/public/js/iSlider.plugin.dot.js"></script>
+<script src="build/iSlider.min.js"></script>
+<script src="build/iSlider.animate.min.js"></script>
+<script src="build/iSlider.plugin.dot.min.js"></script>
 <script>
 
     function fstyle() {
