--- a/demo/pic_card.html
+++ b/demo/pic_card.html
@@ -51,7 +51,7 @@
             float: right;
             width: 1.8333333333333rem;
             height: 1.8333333333333rem;
-            background: url('./imgs/card/music-icon.png');
+            background: url('//be-fe.github.io/static/images/iSlider-card/music-icon.png');
             background-size: cover;
         }
 
@@ -133,20 +133,20 @@
     <span id="musicBtnTxt" style="display: none;">关闭</span>
     <i id="musicBtn" class="music-btn on"></i>
 </aside>
-<audio src="./imgs/card/YouGotMe.mp3" autoplay="autoplay" loop="loop" id="autoplay"></audio>
+<audio src="//be-fe.github.io/static/audios/YouGotMe.mp3" autoplay="autoplay" loop="loop" id="autoplay"></audio>
 <div id="iSlider-arrow"></div>
 <script src="./public/js/iSlider.js"></script>
 
 <script>
     var list = [
-        {content: "./imgs/card/1.jpg"},
-        {content: "./imgs/card/2.jpg"},
-        {content: "./imgs/card/3.jpg"},
-        {content: "./imgs/card/4.jpg"},
-        {content: "./imgs/card/5.jpg"},
-        {content: "./imgs/card/6.jpg"},
-        {content: "./imgs/card/7.jpg"},
-        {content: "./imgs/card/8.jpg"}
+        {content: "//be-fe.github.io/static/images/iSlider-card/1.jpg"},
+        {content: "//be-fe.github.io/static/images/iSlider-card/2.jpg"},
+        {content: "//be-fe.github.io/static/images/iSlider-card/3.jpg"},
+        {content: "//be-fe.github.io/static/images/iSlider-card/4.jpg"},
+        {content: "//be-fe.github.io/static/images/iSlider-card/5.jpg"},
+        {content: "//be-fe.github.io/static/images/iSlider-card/6.jpg"},
+        {content: "//be-fe.github.io/static/images/iSlider-card/7.jpg"},
+        {content: "//be-fe.github.io/static/images/iSlider-card/8.jpg"}
     ];
 
     var islider = new iSlider({
