--- a/demo/index.html
+++ b/demo/index.html
@@ -119,6 +119,7 @@
                 <button type="button" data-target="./2.X_with-plugin-zoom.html">Picture scaling plug-in</button>
                 <button type="button" data-target="./2.X_with-plugins-dot-button.html">Dot Button plug-in</button>
                 <button type="button" data-target="./2.X_with-plugins-others.html">Custom plug-ins</button>
+                <button type="button" data-target="./pic_card.html">Picture card</button>
             </div>
             <h3 class="animate-title">demo code</h3>
                 <pre>
