--- a/demo/2.X_more-autoplay.html
+++ b/demo/2.X_more-autoplay.html
@@ -64,7 +64,7 @@
     var list = [
         // picture
         {
-            content: './imgs/6.jpg'
+            content: './imgs/pic.jpg'
         },
         // HTML String
         {
