--- a/demo/music_card.html
+++ b/demo/music_card.html
@@ -136,8 +136,7 @@
 <audio src="//be-fe.github.io/static/audios/YouGotMe.mp3" autoplay="autoplay" loop="loop" id="autoplay"></audio>
 <div id="iSlider-arrow"></div>
 <script src="./public/js/iSlider.js"></script>
-
-<script>
+<script id="show-code">
     var list = [
         {content: "//be-fe.github.io/static/images/iSlider-card/1.jpg"},
         {content: "//be-fe.github.io/static/images/iSlider-card/2.jpg"},
@@ -152,11 +151,11 @@
     var islider = new iSlider({
         data: list,
         dom: document.getElementById("iSlider-wrapper"),
+        isOverspread: true,
         isVertical: true,
         isLooping: true,
         animateType: 'card',
         onslidechange: function (idx) {
-
             if (this.isLooping === false) {
                 if (idx === this.data.length - 1) {
                     document.getElementById('iSlider-arrow').style.display = 'none';
