--- a/index.html
+++ b/index.html
@@ -202,14 +202,13 @@
         .is-in-is > em {
             position: absolute;
             top: 100%;
-            left: 50%;
+            right: 0;
             width: 200px;
-            margin-top: 10px;
-            margin-left: -100px;
+            margin-top: 8px;
             font-style: normal;
             font-size: 12px;
             text-align: center;
-            color: rgba(255, 255, 255, .10);
+            color: rgba(255, 255, 255, .15);
         }
 
         .is-in-is > b {
