--- a/index.html
+++ b/index.html
@@ -203,11 +203,10 @@
             position: absolute;
             top: 100%;
             right: 0;
-            width: 200px;
             margin-top: 8px;
             font-style: normal;
             font-size: 12px;
-            text-align: center;
+            text-align: right;
             color: rgba(255, 255, 255, .15);
         }
 
