--- a/index.html
+++ b/index.html
@@ -423,14 +423,36 @@
         return h;
     })();
 
+    var lsn;
     function IS_IN_IS_Autoplay(i) {
+        if (lsn) {
+            window.clearInterval(lsn);
+        }
         if (i === 2) {
             IS_IN_IS.play();
             IS_IN_IS_BGM.play();
+            lsn = window.setInterval(function () {
+                var volume = IS_IN_IS_BGM.volume;
+                volume += 0.01;
+                if (volume >= 1) {
+                    volume = 1;
+                    window.clearInterval(lsn);
+                }
+                IS_IN_IS_BGM.volume = volume;
+            }, 10);
         } else {
             IS_IN_IS.pause();
-            IS_IN_IS_BGM.pause();
-            IS_IN_IS_BGM.currentTime = 0;
+            lsn = window.setInterval(function () {
+                var volume = IS_IN_IS_BGM.volume;
+                volume -= 0.01;
+                if (volume <= 0) {
+                    volume = 0;
+                    window.clearInterval(lsn);
+                    IS_IN_IS_BGM.pause();
+                }
+                IS_IN_IS_BGM.volume = volume;
+            }, 10);
+            // IS_IN_IS_BGM.currentTime = 0;
         }
     }
 
