resize evt fixed

--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                 animateTime: 1000,
 //                fillSeam: 1,
 //                fixPage: 0,
-//                isDebug: 1,
+                isDebug: 1,
 //                isAutoplay: true,
 //                duration: 5000,
 //                plugins: [
