--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
         content: document.getElementById('pages')
     });
 
-    for (var i = 0; i < 10; i++)
+    for (var i = 0; i < 3; i++)
         list.push({
             content: '<div class="ro">' + i + '</div>'
         });
@@ -133,7 +133,7 @@
 //                data: list,
                 dom: document.getElementById("iSlider-wrapper"),
 //                isVertical: 1,
-                isLooping: 1,
+//                isLooping: 1,
                 isOverspread: 1,
 //                animateType: 'rotate',
 //                delay: 3000,
