--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
             height: 100%;
             margin: 0;
             border: 0 none;
+            overflow: hidden;
             background-color: rgba(0, 0, 0, 0);
             background-repeat: no-repeat;
             background-position: 50% 50%;
