+logo +Method subjectTo

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         <div class="is-in-is-wrap">
             <div class="is-in-is">
                 <div id="is_in_is"></div>
-                <em>吾王劍鋒所指 即吾心之所向</em>
+                <em>吾王美如画</em>
                 <b>NESTED iSlider</b>
             </div>
         </div>
@@ -382,6 +382,7 @@
         </audio>
     </div>
 </div>
+<script src="demo/public/js/logo.js"></script>
 <script src="build/iSlider.min.js"></script>
 <script src="build/iSlider.animate.min.js"></script>
 <script src="build/iSlider.plugin.dot.min.js"></script>
