--- a/demo/swop.html
+++ b/demo/swop.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
     <title>S.W.O.P</title>
-    <link href="./style/iSlider.css" rel="stylesheet">
+    <link href="./public/css/iSlider.css" rel="stylesheet">
     <style>
         body, html {
             padding: 0;
@@ -45,9 +45,9 @@
 <body>
 <div class="fork" id="S"></div>
 <div class="fork" id="N"></div>
-<script type="text/javascript" src="./js/iSlider.js"></script>
-<script type="text/javascript" src="./js/ext/animate.js"></script>
-<script>
+<script type="text/javascript" src="./public/js/iSlider.js"></script>
+<script type="text/javascript" src="./public/js/iSlider.animate.js"></script>
+<script id="show-code">
     var $S = new iSlider(document.getElementById('S'), [
         {
             content: 'This is the first scene',
