--- a/demo/index_chinese.html
+++ b/demo/index_chinese.html
@@ -114,7 +114,7 @@
             <p>
                 <a href="http://be-fe.github.io/iSlider/demo/index.html">iSlider English Demo page</a>
                 <br>
-                <a href="#demos">iSlider 示例</a>
+                <a href="#demo">iSlider 示例</a>
             </p>
 
             <h2>概要</h2>
