Demo page: OPTIONS add DOM & DATA

--- a/demo/index_chinese.html
+++ b/demo/index_chinese.html
@@ -314,7 +314,40 @@
                         </dl>
                     </dt>
                 </dd>
-
+                <dd id="DOM">
+                    <dt>
+                        <div class="nameContainer paramContainer">
+                            <h4 class="name">
+                                DOM
+                            </h4>
+                            <span class="paramType">
+                                {HTMLElement}
+                            </span>
+                        </div>
+                    </dt>
+                    <dt>
+                        <div class="description">
+                            <p>容器dom节点，作用同参数<a href="#dom">DOM</a>，若设置此项，DOM会被覆盖</p>
+                        </div>
+                    </dt>
+                </dd>
+                <dd id="DATA">
+                    <dt>
+                        <div class="nameContainer paramContainer">
+                            <h4 class="name">
+                                DATA
+                            </h4>
+                            <span class="paramType">
+                                {Array}
+                            </span>
+                        </div>
+                    </dt>
+                    <dt>
+                        <div class="description">
+                            <p>数据列表，作用同参数<a href="#data">DATA</a>，若设置此项，DATA会被覆盖。</p>
+                        </div>
+                    </dt>
+                </dd>
                 <dd id="animateType">
                     <dt>
                         <div class="nameContainer paramContainer">
