--- a/demo/index_chinese.html
+++ b/demo/index_chinese.html
@@ -132,16 +132,18 @@
             <p>iSlider是一个表现出众，无任何插件依赖的手机平台javascript滑动组件。它能够处理任何元素，例如图片或者DOM元素。</p>
 
             <h3 id="intro-good">特性</h3>
-            <ul class="task-list">
-                <li>性能极好，硬件加速，极小占用内存</li>
-                <li>能够自定义动画，自带的动画包括 default, rotate, depth, flow, flip, card, fade 等</li>
-                <li>你能够简易地添加回调函数(islider.on('eventType', callback))</li>
-                <li>支持滑动衰减效果，循环效果，自动滑动效果，水平/垂直滑动</li>
-                <li>自动适配桌面鼠标动作与移动端手势，方便测试与跨平台使用</li>
-                <li>支持图片预加载，改善用户体验</li>
-                <li>[Plugin]支持手势缩放，解决图片太大无法看清问题</li>
-                <li>[2.0+]支持更多种类的元素置入，自动匹配场景类型，识别图片并预加载</li>
-                <li>[2.0+]更完善的代理事件管理机制，优化内存占用</li>
+            <ul>
+                <li>优秀的性能，更少的内存占用；</li>
+                <li>提供丰富的动画切换效果，自带的效果包括 default, rotate, depth, flow, flip, card, fade 等，并且可以进行无限的扩展；</li>
+                <li>提供丰富的回调触发器，并且添加回调函数极为方便，无论在初始化还是运行过程中；</li>
+                <li>支持滑动衰减效果，循环效果，自动滑动效果，水平/垂直滑动等众多参数，且功能皆可配置；</li>
+                <li>自动适配桌面鼠标动作与移动端手势，方便测试与跨平台使用；</li>
+                <li>支持图片预加载，优秀的用户体验；</li>
+                <li>[插件] 提供多种插件，如切换按钮、场景指示器、图片缩放等，提供插件注册、管理等方法方便自定义扩展；</li>
+                <li>[2.0+] 可以按需加载需要的功能（效果 或 插件）；</li>
+                <li>[2.0+] 支持更多种类的元素置入，自动匹配数据类型，识别图片并进行预加载；</li>
+                <li>[2.0+] 更完善的代理事件管理机制，优化内存占用；</li>
+                <li>[2.0+] 更加丰富的回调事件，更灵活的事件管理、触发机制；</li>
             </ul>
         </div>
 
@@ -211,7 +213,7 @@
                         <th>Type</th>
                         <th class="last">Description</th>
                     </tr>
-                    <tr> 
+                    <tr>
                         <td class="name"><code>DOM</code></td>
                         <td class="type">
                             <span class="param-type">dom</span>
@@ -220,7 +222,7 @@
                             容器dom节点
                         </td>
                     </tr>
-                    <tr> 
+                    <tr>
                         <td class="name"><code>DATA</code></td>
                         <td class="type">
                             <span class="param-type">Array</span>
@@ -229,7 +231,7 @@
                             数据列表
                         </td>
                     </tr>
-                    <tr> 
+                    <tr>
                         <td class="name"><code>OPTIONS</code></td>
                         <td class="type">
                             <span class="param-type">Object</span>
@@ -249,7 +251,7 @@
                                 {HTMLElement}
                             </span>
                         </h4>
-                        
+
                     </div>
                 </dt>
                 <dt>
@@ -305,7 +307,7 @@
                                     {Object}
                                 </span>
                             </h3>
-                            
+
                         </div>
                     </dt>
                     <dt>
