--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>iSlider by BE-FE</title>
-    <link rel="stylesheet" href="public/css/index.css">
+    <link rel="stylesheet" href="public/css/index_old.css">
     <link rel="stylesheet" href="//highlightjs.org/static/demo/styles/monokai-sublime.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -602,6 +602,6 @@
 <script src="//cdn.bootcss.com/jquery/1.11.2/jquery.js"></script>
 <script src="//cdn.jsdelivr.net/highlight.js/8.9.1/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-<script src="./public/js/index.js"></script>
+<script src="./public/js/index_old.js"></script>
 </body>
 </html>
